--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # database - flyway
 spring.flyway.enabled=false
@@ -26,3 +26,6 @@ spring.flyway.password=bazlo0987
 
 # other spring settings
 spring.jackson.generator.write-bigdecimal-as-plain=true
+
+# security
+jwt.provider.secret=${JWT_PROV_SEC}
