--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
             <artifactId>hibernate-types-55</artifactId>
             <version>2.17.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
