--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port=8081
 server.servlet.context-path=/sb
 
 # database
-spring.datasource.url=jdbc:mysql://172.17.0.2/schoolbook
-spring.datasource.username=root
-spring.datasource.password=bazlo0987
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
