Added cors config; updated dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,12 +20,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 # database - flyway
 spring.flyway.enabled=false
-spring.flyway.url=jdbc:mysql://172.17.0.2/schoolbook
-spring.flyway.user=root
-spring.flyway.password=bazlo0987
+spring.flyway.url=${DB_URL}
+spring.flyway.user=${DB_USERNAME}
+spring.flyway.password=${DB_PASSWORD}
 
 # other spring settings
 spring.jackson.generator.write-bigdecimal-as-plain=true
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
 
 # security
 jwt.provider.secret=${JWT_PROV_SEC}
