Extended exception handling; modify login and user creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ logging.level.org.springframework=TRACE
 # socket / path settings
 server.port=8081
 server.servlet.context-path=/sb
+server.error.whitelabel.enabled=false
+server.error.path=/error
 
 # database
 spring.datasource.url=${DB_URL}
@@ -26,8 +28,6 @@ spring.flyway.password=${DB_PASSWORD}
 
 # other spring settings
 spring.jackson.generator.write-bigdecimal-as-plain=true
-spring.mvc.throw-exception-if-no-handler-found=true
-spring.web.resources.add-mappings=false
 
 # security
 jwt.provider.secret=${JWT_PROV_SEC}
