--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,12 @@ spring.jackson.generator.write-bigdecimal-as-plain=true
 
 # security
 jwt.provider.secret=${JWT_PROV_SEC}
+
+# email
+#spring.mail.host=${EMAIL_HOST}
+#spring.mail.port=${EMAIL_PORT}
+#spring.mail.username=${EMAIL_USERNAME}
+#spring.mail.password=${EMAIL_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=${EMAIL_SMTP_AUTH}
+#spring.mail.properties.mail.smtp.starttls.enable=${EMAIL_ENABLE_TLS}
+#email.recipient=${EMAIL_RECIPIENT}
