--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.error.include-exception=true
 server.error.include-message=always
 server.error.include-stacktrace=never
-logging.level.org.springframework=TRACE
+logging.level.org.springframework=INFO
 
 # socket / path settings
 server.port=8081
