--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,13 @@ server.error.include-exception=true
 server.error.include-message=always
 server.error.include-stacktrace=never
 logging.level.org.springframework=INFO
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 # socket / path settings
 server.port=8081
 server.servlet.context-path=/sb
 server.error.whitelabel.enabled=false
-server.error.path=/error
+#server.error.path=/error
 
 # database
 spring.datasource.url=${DB_URL}
@@ -28,6 +29,7 @@ spring.flyway.password=${DB_PASSWORD}
 
 # other spring settings
 spring.jackson.generator.write-bigdecimal-as-plain=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # security
 jwt.provider.secret=${JWT_PROV_SEC}
